@@ -1,3 +1,8 @@
+2011-05-17 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
+
+	* InterfaceD3PD: bugfix for SignalMCGen, removing TopInputs variables, cleanup
+  * tag KLFitter-00-04-13
+
 2011-05-13 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>, Stefan Guindon <stefan.guindon@cern.ch>, Johannes Erdmann <johannes.erdmann@cern.ch>
 
 	* bug fix - erased obsolete (and buggy) LikelioodBase::BTaggingProbability()
